# scdlpicker

./: AUTHORS.md  CHANGES.md  CMakeLists.txt  CONTRIBUTING.md  INSTALL  ISSUES  README.md  setup.py
doc/: relocate-event.md  workflow.md
etc/defaults/: scdlpicker-client.cfg  scdlpicker-online-relocator.cfg  scdlpicker.cfg
etc/descriptions/: scdlpicker-client.xml  scdlpicker-online-relocator.xml  scdlpicker-repicker.xml
etc/init/: scdlpicker.py
example/: README.md  run-client.sh  run-repicker.sh
lib/: config.py  dbutil.py  defaults.py  depth.py  eventworkspace.py  inventory.py  relocation.py  util.py
test/: test-repicker.sh
test/data/events/gfz2022csiw/: 2022-02-08T13:19:25.714Z.yaml
test/data/events/gfz2022csiw/waveforms/: GE.ACRG..BHE.mseed  GE.ACRG..BHN.mseed  GE.ACRG..BHZ.mseed  GE.KIBK..BHE.mseed  GE.KIBK..BHN.mseed  GE.KIBK..BHZ.mseed  GE.LODK..BHE.mseed  GE.LODK..BHN.mseed  GE.LODK..BHZ.mseed  GE.MARCO..BHE.mseed  GE.MARCO..BHN.mseed  GE.MARCO..BHZ.mseed  GE.MATE..BHE.mseed  GE.MATE..BHN.mseed  GE.MATE..BHZ.mseed  GE.MORC..BHE.mseed  GE.MORC..BHN.mseed  GE.MORC..BHZ.mseed  GE.MTE..BHE.mseed  GE.MTE..BHN.mseed  GE.MTE..BHZ.mseed  GT.DBIC.00.BHE.mseed  GT.DBIC.00.BHN.mseed  GT.DBIC.00.BHZ.mseed
test/python/: test.py
