SC_BEGIN_PACKAGE(SCDLPICKER)

SET(PYTHON_LIB_DIR ${CMAKE_INSTALL_PREFIX}/lib/python/scdlpicker)

FILE(GLOB pylibs "${CMAKE_CURRENT_SOURCE_DIR}/lib/*.py")
INSTALL(DIRECTORY DESTINATION ${PYTHON_LIB_DIR})
INSTALL(FILES ${pylibs} DESTINATION ${PYTHON_LIB_DIR})

SET(INIT_TEMPLATE ${CMAKE_CURRENT_SOURCE_DIR}/etc/init/scdlpicker.py)

SUBDIRS(bin)
